# photon-action-memory

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/commands/: release.md
.codex/prompts/: orchestrate-worker.md  uat-manual-check.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  mlx-smoke.yml  release.yml
configs/: README.md
dev-reports/issue-10/: design.md  implementation-summary.md  verification.md
dev-reports/issue-101/: design.md  implementation-summary.md  verification.md
dev-reports/issue-103/: design.md  implementation-summary.md  verification.md
dev-reports/issue-104/: design.md  implementation-summary.md  verification.md
dev-reports/issue-107/: design.md  implementation-summary.md  verification.md
dev-reports/issue-109/: design.md  implementation-summary.md  verification.md
dev-reports/issue-11/: design.md  implementation-summary.md  verification.md
dev-reports/issue-110/: design.md  implementation-summary.md  verification.md
docs/: anvil-integration.md  photon-action-memory.md
photon_action_memory/: __init__.py
scripts/: README.md  anvil_v1_summarize_smoke.py  build_action_memory_checkpoint.py  codex_orchestrate.py  commandmate_codex.py  cy5_success_rate_analysis.py  cy6_gate_check.py  seed_common_seeds.sh  seed_expanded_eval_scenarios.sh  seed_live_injection_summary.py  seed_universal_seeds.sh
tests/: test_action_memory_checkpoint_builder.py  test_action_memory_scorer.py  test_answer_leak.py  test_anvil_context_pack_api.py  test_anvil_contract.py  test_anvil_eval_multilingual_seeds.py  test_anvil_evaluate.py  test_anvil_evidence_expand.py  test_anvil_feedback.py  test_anvil_feedback_scoring.py  test_anvil_v1_summarize_smoke.py  test_canary_policy.py  test_checkpoint.py  test_checkpoint_registry.py  test_chunks.py  test_codex_orchestrate.py  test_commandmate_codex.py  test_context_pack.py  test_context_pollution.py  test_context_ranking.py  test_context_scorer.py  test_contradiction_detection.py  test_contradiction_detection_api.py  test_cy6_gate_check.py  test_datasets.py  test_eval_metrics.py  test_eval_runner_comparison.py  test_evaluate.py  test_event_store.py  test_evidence_expander.py  test_feedback_export.py  test_import.py  test_llm_draft_summary.py  test_local_llm_metrics.py  test_mycodebranchdesk_exporter.py  test_overlap_detector.py  test_photon_adapter.py  test_ranking_fallback.py  test_raw_tool_log_policy.py  test_rollout_policy.py  (+13 more)
(+303 files in other folders)
