[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "photon-action-memory"
version = "0.1.0"
description = "Action-oriented memory sidecar for coding agents, powered by PHOTON."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Kewton" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
]
mlx = [
  "mlx>=0.20",
]
embedding = [
  "sentence-transformers>=2.7",
]

[project.urls]
Homepage = "https://github.com/kewton/photon-action-memory"

[project.scripts]
photon-seed-add = "photon_action_memory.cli.seed_add:main"

[tool.hatch.build.targets.wheel]
packages = ["photon_action_memory"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "UP",
  "W",
]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["photon_action_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
